# cover

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: commands.rs
cli/src/flags/: archive.rs  clean.rs  list.rs  restore.rs  schedule.rs  sync.rs
crates/: Cargo.toml
crates/archive/: Cargo.toml
crates/backup/: Cargo.toml
crates/backup/src/archive/: archive.rs
crates/backup/src/clean/: clean.rs
crates/backup/src/list/: list.rs
crates/backup/src/sync/: README.md  action.rs  changes.rs  duration.rs  filter.rs  listing.rs  log.rs  mod.rs  sync.rs  timestamp.rs  trigger.rs
crates/backup/tests/: sync_test.rs
crates/clean/: Cargo.toml
crates/cover/: Cargo.toml
crates/cover/src/sync/: changes.rs  filter.rs  listing.rs  log.rs  timestamp.rs  trigger.rs
crates/cover/tests/: sync_test.rs
crates/cover_files/: Cargo.toml  README.md
crates/cover_files/src/: lib.rs
crates/cover_files/src/archive/: archive.rs
crates/cover_files/src/sync/: changes.rs  filter.rs  hash.rs  listing.rs  log.rs  mod.rs  sync.rs  timestamp.rs  trigger.rs
crates/cover_files/tests/: archive_test.rs  sync_test.rs
crates/list/: Cargo.toml
crates/list/src/: lib.rs
crates/restore/: Cargo.toml
crates/restore/src/: lib.rs
crates/schedule/: Cargo.toml
crates/schedule/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: changed_only.rs  delete.rs  dry_run.rs  lib.rs  utils.rs  verbose.rs
crates/sync/tests/: delete_test.rs  dry_run_test.rs  sync_test.rs  verbose_test.rs
