[workspace]
resolver = "3"
members = ["cli", "crates/*"]

[workspace.dependencies]
clap = { version = "4.5.47", features = ["derive"] }
time = { version = "0.3.44", features = ["local-offset", "macros", "formatting"] }
walkdir = "2.5.0"
tempfile = "3.23.0"
os_pipe = "1.2.2"
libc = "0.2.176"

[workspace.package]
edition = "2024"
repository = "https://github.com/ibilalkayy/cover"
version = "0.1.6"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
