[package]
name = "cli"
description.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
backup = { version = "0.1.17", path = "../crates/backup" }
