[package]
name = "cover"
description.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
cover-files = { version = "0.1.21", path = "../crates/cover_files" }
