[package]
name = "cover-files"
description.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
walkdir.workspace = true
zip.workspace = true
blake2.workspace = true
file-hashing.workspace = true
itertools.workspace = true
