[package]
name = "sync"
edition.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true

[dependencies]
walkdir.workspace = true
time.workspace = true
tempfile.workspace = true
os_pipe.workspace = true
libc.workspace = true
